--- a/project8/templates/html/html2.html
+++ b/project8/templates/html/html2.html
@@ -5,6 +5,7 @@
     <title>item in cart</title>
 </head>
 <body>
+<h2>this is updated file</h2>
 <h2> list items in cart</h2>
 {% if request.session %}
     <table border = 2>
