--- a/project8/templates/html/html2.html
+++ b/project8/templates/html/html2.html
@@ -7,6 +7,7 @@
 <body>
 <h2>this is updated file</h2>
 <h2> list items in cart</h2>
+<h4>user entered data</h4>
 {% if request.session %}
     <table border = 2>
     <thead>
